<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.cimt.talendcomp</groupId>
    <artifactId>cimt-talendcomp-xmldynamic</artifactId>
    <version>22.8</version>
    <name>de.cimt.talendcomp.xmldynamic [${project.version}]</name>
    
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/cimt-ag/talendcomp_tXmlJaxb/issues</url>
    </issueManagement>
    
    <scm>
        <developerConnection>scm:git:https://github.com/cimt-ag/talendcomp_tXmlJaxb.git</developerConnection>
    </scm>
	 <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.build.componentProjectDirectory>talend_component/tXmlJaxbModel/</project.build.componentProjectDirectory>
    </properties>
    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.3</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <archive>
                        <addMavenDescriptor>false</addMavenDescriptor>
                        <manifestEntries>
                            <Implementation-Title>cimt-talendcomp-xmldynamic</Implementation-Title>
                            <Implementation-Version>${project.version}</Implementation-Version>
                            <Implementation-Vendor>cimt-ag</Implementation-Vendor>
                            <Implementation-Timestamp>${maven.build.timestamp}</Implementation-Timestamp>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
             
            <plugin>
                <groupId>de.cimt.talendcomp</groupId>
                <artifactId>cimt-talendcomp-maven-plugin</artifactId>
                <version>3.2</version>
                <configuration>
                    <componentBaseDir>target/talend_component/</componentBaseDir>
                    <copyFromSourceBaseDir>src/main/talend_component</copyFromSourceBaseDir>
                </configuration>
                <executions>
                    <execution>
                        <id>tXmlJaxbModel</id>
                        <phase>install</phase>
                        <goals>
                            <goal>component</goal>
                        </goals>
                        <configuration>
                            <componentName>tXmlJaxbModel</componentName>
                        </configuration>
                    </execution>
                    <execution>
                        <id>tXmlJaxbObjectInput</id>
                        <phase>install</phase>
                        <goals>
                            <goal>component</goal>
                        </goals>
                        <configuration>
                            <componentName>tXmlJaxbObjectInput</componentName>
                            <noJars>true</noJars>
                        </configuration>
                    </execution>
                    <execution>
                        <id>tXmlJaxbObjectOutput</id>
                        <phase>install</phase>
                        <goals>
                            <goal>component</goal>
                        </goals>
                        <configuration>
                            <componentName>tXmlJaxbObjectOutput</componentName>
                            <noJars>true</noJars>
                        </configuration>
                    </execution>
                    <execution>
                        <id>tXmlJaxbSave</id>
                        <phase>install</phase>
                        <goals>
                            <goal>component</goal>
                        </goals>
                        <configuration>
                            <componentName>tXmlJaxbSave</componentName>
                            <noJars>true</noJars>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <dependencies>
       <!-- jakarta/JAXB APIs -->
        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>4.0.0</version>
            <type>jar</type>
        </dependency>
        <!-- JAXB RI -->
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-impl</artifactId>
            <version>4.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-core</artifactId>
            <version>4.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.sun.xml.bind</groupId>
            <artifactId>jaxb-xjc</artifactId>
            <version>4.0.1</version>
        </dependency>
      
      <dependency>
            <groupId>de.cimt.utils</groupId>
            <artifactId>TypeConversion</artifactId>
            <version>1.0</version>
        </dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
         
    </dependencies>
   
</project>
